tests/ui/soundness/drop2.stderr
error[E0119]: conflicting implementations of trait `std::ops::Drop` for type `SelfReferential`:
  --> $DIR/drop2.rs:9:12
   |
9  | #[easy_pin(Drop)]
   |            ^^^^ conflicting implementation for `SelfReferential`
...
19 | impl Drop for SelfReferential {
   | ----------------------------- first implementation here

For more information about this error, try `rustc --explain E0119`.
